# gr-grand

./: CMakeLists.txt
cmake/Modules/: grandConfig.cmake
docs/: README.grand
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  grand_accelerometer.xml  grand_float_array.xml  grand_light_sensor.xml  grand_opensl_source.xml  grand_sensor0.xml  grand_sensor1.xml
include/grand/: CMakeLists.txt  accelerometer.h  api.h  float_array.h  light_sensor.h  opensl_sink.h  opensl_source.h  sensor0.h  sensor1.h  sensor_base.h
lib/: CMakeLists.txt  accelerometer_impl.cc  accelerometer_impl.h  float_array_impl.cc  float_array_impl.h  light_sensor_impl.cc  light_sensor_impl.h  opensl_sink_impl.cc  opensl_sink_impl.h  opensl_source_impl.cc  opensl_source_impl.h  qa_grand.cc  qa_grand.h  sensor0_impl.cc  sensor0_impl.h  sensor1_impl.cc  sensor1_impl.h  sensor_base.cc  test_grand.cc
python/: CMakeLists.txt  __init__.py  qa_accelerometer.py  qa_float_array.py  qa_opensl_source.py  qa_sensor0.py
swig/: CMakeLists.txt  grand_swig.i
